@@ -37,7 +37,7 @@ void delay_line_init(DelayLine *dl, Track *track, uint32_t sample_rate)
 	&dl->len_ep,
 	&dl->len_msec,
 	JDAW_INT16,
-	"delay_line_len",
+	"len",
 	"Time (ms)",
 	JDAW_THREAD_DSP,
 	track_settings_page_el_gui_cb, NULL, delay_line_len_dsp_cb,
@@ -51,7 +51,7 @@ void delay_line_init(DelayLine *dl, Track *track, uint32_t sample_rate)
 	&dl->amp_ep,
 	&dl->amp,
 	JDAW_DOUBLE,
-	"delay_line_amp",
+	"amp",
 	"Amp",
 	JDAW_THREAD_DSP,
 	/* delay_line_amp_gui_cb, NULL, NULL, */
@@ -66,7 +66,7 @@ void delay_line_init(DelayLine *dl, Track *track, uint32_t sample_rate)
 	&dl->stereo_offset_ep,
 	&dl->stereo_offset,
 	JDAW_DOUBLE,
-	"delay_line_stereo_offset",
+	"stereo_offset",
 	"Stereo offset",
 	JDAW_THREAD_DSP,
 	track_settings_page_el_gui_cb, NULL, NULL,
